[gd_scene load_steps=8 format=3 uid="uid://c06htcj4rgjof"]

[ext_resource type="Script" uid="uid://xhlgkhgkyrkc" path="res://scripts/reps/dungeon_builder.gd" id="1_8d50e"]
[ext_resource type="PackedScene" uid="uid://cc5747aqrge5g" path="res://scenes/rooms/meshes/simplefloor.blend" id="1_ln2x5"]
[ext_resource type="PackedScene" uid="uid://b8lqj7rv80ssv" path="res://scenes/player_3d.tscn" id="3_iwus7"]
[ext_resource type="Script" uid="uid://bh3fwijpdw24i" path="res://scripts/reps/debug_controls.gd" id="4_iwus7"]
[ext_resource type="PackedScene" uid="uid://bclui8nnjmoh" path="res://scenes/rooms/dirts/dirt_dugout_1_way.tscn" id="5_ahmjg"]
[ext_resource type="PackedScene" uid="uid://bsqk3tfre2xyg" path="res://scenes/rooms/dirts/dirt_dugout_2_ways_bend.tscn" id="6_swri5"]
[ext_resource type="Environment" uid="uid://dyvjkwni31khi" path="res://scenes/dungeon_environment.tres" id="7_swri5"]

[node name="debug level" type="Node3D" node_paths=PackedStringArray("player")]
script = ExtResource("1_8d50e")
grid_size = Vector3(2, 3, 2)
player = NodePath("Player3d")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = ExtResource("7_swri5")

[node name="simplefloor" parent="." instance=ExtResource("1_ln2x5")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1, 0, 1)

[node name="simplefloor2" parent="." instance=ExtResource("1_ln2x5")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 0, 1)

[node name="simplefloor3" parent="." instance=ExtResource("1_ln2x5")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 0, -1)

[node name="simplefloor14" parent="." instance=ExtResource("1_ln2x5")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3, 0, -3)

[node name="simplefloor4" parent="." instance=ExtResource("1_ln2x5")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1, 0, -1)

[node name="simplefloor5" parent="." instance=ExtResource("1_ln2x5")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3, 0.1, -1)

[node name="simplefloor10" parent="." instance=ExtResource("1_ln2x5")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3, 0.3, -3)

[node name="simplefloor11" parent="." instance=ExtResource("1_ln2x5")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3, 0.6, -5)

[node name="simplefloor12" parent="." instance=ExtResource("1_ln2x5")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3, 1, -7)

[node name="simplefloor13" parent="." instance=ExtResource("1_ln2x5")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3, 1.5, -9)

[node name="simplefloor6" parent="." instance=ExtResource("1_ln2x5")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3, 0, 1)

[node name="simplefloor7" parent="." instance=ExtResource("1_ln2x5")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3, 0, 3)

[node name="simplefloor8" parent="." instance=ExtResource("1_ln2x5")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1, 0, 3)

[node name="simplefloor9" parent="." instance=ExtResource("1_ln2x5")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 0, 3)

[node name="Player3d" parent="." instance=ExtResource("3_iwus7")]

[node name="DebugControls" type="CanvasLayer" parent="." node_paths=PackedStringArray("_player", "_cinematic_btn", "_gridless_btn", "_debug_shapes_btn")]
script = ExtResource("4_iwus7")
_player = NodePath("../Player3d")
_cinematic_btn = NodePath("HBoxContainer/Cinematic Btn")
_gridless_btn = NodePath("HBoxContainer/Gridless Btn")
_debug_shapes_btn = NodePath("HBoxContainer/Debug Shapes Btn")

[node name="HBoxContainer" type="HBoxContainer" parent="DebugControls"]
offset_left = 100.0
offset_top = 10.0
offset_right = 186.0
offset_bottom = 41.0

[node name="Cinematic Btn" type="Button" parent="DebugControls/HBoxContainer"]
layout_mode = 2
toggle_mode = true
text = "Cinematic"

[node name="Gridless Btn" type="Button" parent="DebugControls/HBoxContainer"]
layout_mode = 2
toggle_mode = true
text = "Gridless"

[node name="Debug Shapes Btn" type="Button" parent="DebugControls/HBoxContainer"]
layout_mode = 2
toggle_mode = true
text = "Debug Shapes"

[node name="Reset Pos Btn" type="Button" parent="DebugControls/HBoxContainer"]
layout_mode = 2
toggle_mode = true
text = "Reset Pos"

[node name="dirt_dugout_1way" parent="." instance=ExtResource("5_ahmjg")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -4)

[node name="dirt_dugout_2ways_bend" parent="." instance=ExtResource("6_swri5")]
transform = Transform3D(-4.371139e-08, 0, 1, 0, 1, 0, -1, 0, -4.371139e-08, 2, 0, -4)

[connection signal="pressed" from="DebugControls/HBoxContainer/Cinematic Btn" to="DebugControls" method="_on_cinematic_btn_pressed"]
[connection signal="pressed" from="DebugControls/HBoxContainer/Gridless Btn" to="DebugControls" method="_on_gridless_btn_pressed"]
[connection signal="pressed" from="DebugControls/HBoxContainer/Debug Shapes Btn" to="DebugControls" method="_on_debug_shapes_btn_pressed"]
[connection signal="pressed" from="DebugControls/HBoxContainer/Reset Pos Btn" to="DebugControls" method="_on_reset_pos_btn_pressed"]
